--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ PORT=8080
 DB_CONNECTION_STRING=mongodb+srv://Nepmine:Nepmine@nepmine.scpxvov.mongodb.net/Doubtify?retryWrites=true&w=majority&appName=Nepmine
 SECRET_KEY=Nepmine
 
-# It is for the meeting time room stuff
-serverSecret=dceb1e77c6e5ccb6c4157b71a93958db
-appID = 1978986993
+# It is for the meeting time, room stuff
+serverSecret=685b22c5b672ed7fef6fdf58f10f72ab
+appID = 633869435
